// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should set key prefix 1`] = `
"import { localize } from \\"./localizer\\";
export default (() => <>
        <p>{localize(\\"test0\\")}</p>
        <Title id=\\"titleId\\" label=\\"lorem ipsum\\" />
    </>);
export const localizeKeyMap = {
  test0: \\"hello world\\"
};"
`;

exports[`should set keyMapIdentifier 1`] = `
"import { localize } from \\"./localizer\\";
export default (() => <>
        <p>{localize(\\"4\\")}</p>
        <Title id=\\"titleId\\" label=\\"lorem ipsum\\" />
    </>);
export const testKeyMapIdentifier = {
  4: \\"hello world\\"
};"
`;

exports[`should set localizer 1`] = `
"import { testLocalizer } from \\"./localizer\\";
export default (() => <>
        <p>{testLocalizer(\\"1\\")}</p>
        <Title id=\\"titleId\\" label=\\"lorem ipsum\\" />
    </>);
export const localizeKeyMap = {
  1: \\"hello world\\"
};"
`;

exports[`should set localizerBinding 1`] = `
"import { localize } from \\"./localizer\\";
export default (() => <>
        <p>{localize(\\"3\\")}</p>
        <Title id=\\"titleId\\" label=\\"lorem ipsum\\" />
    </>);
export const localizeKeyMap = {
  3: \\"hello world\\"
};"
`;

exports[`should set localizerSource 1`] = `
"import { localize } from \\"testlocalizerSource\\";
export default (() => <>
        <p>{localize(\\"2\\")}</p>
        <Title id=\\"titleId\\" label=\\"lorem ipsum\\" />
    </>);
export const localizeKeyMap = {
  2: \\"hello world\\"
};"
`;
